crates/entangle-derive/tests/ui/fail_vec_field.rs
use entangle::prelude::*;

#[derive(ZeroCopySafe)]
#[repr(C)]
struct HasVec {
    data: Vec<u8>,
}
fn main() {}
